EC-2022: lecture 3, fix typos

--- a/EllipticCurves2022/lecture3_slides/lecture3_slides.tex
+++ b/EllipticCurves2022/lecture3_slides/lecture3_slides.tex
@@ -182,7 +182,7 @@ E[2] = \left\{ \mathcal{O}, (e_1, 0), (e_2 ,0), (e_3,0) \right\} \simeq \mathbb{
 \begin{frame}{Многочлены деления}
 \begin{block}{Теорема}
     Пусть $E: {y^2} = {x^3} + Ax + B$, $P = \left( {x,y} \right) \in E$ и $n \in {\mathbb{N}_+ }$. Тогда
-    $$nP = \left( {\frac{{{\phi _n}\left( x \right)}}{{\psi _n^2\left( x \right)}},\;\frac{{{\omega _n}\left( x \right)}}{{{{\left( {{\psi _n}\left( {x,y} \right)} \right)}^3}}}} \right)
+    $$[n] P = \left( {\frac{{{\phi _n}\left( x \right)}}{{\psi _n^2\left( x \right)}},\;\frac{{{\omega _n}\left( x \right)}}{{{{\left( {{\psi _n}\left( {x,y} \right)} \right)}^3}}}} \right)
     $$
 \end{block}
 
@@ -266,7 +266,7 @@ $e_n(S,T) = 1, \forall S \implies T = \mathcal{O}$
 
 \structure{Страница курса:}\\
 {\footnotesize
-    \href{https://crypto-kantiana.com/semyon.novoselov/teaching/elliptic_curves_2021}{crypto-kantiana.com/semyon.novoselov/teaching/elliptic\_curves\_2021}
+    \href{https://crypto-kantiana.com/semyon.novoselov/teaching/elliptic_curves_2022}{crypto-kantiana.com/semyon.novoselov/teaching/elliptic\_curves\_2022}
 }
 \end{frame}
 
