EC-2022: fix typo

--- a/EllipticCurves2022/lecture3_slides/lecture3_slides.tex
+++ b/EllipticCurves2022/lecture3_slides/lecture3_slides.tex
@@ -242,7 +242,7 @@ $e_n(S,T) = 1, \forall S \implies T = \mathcal{O}$
 \end{frame}
 
 \begin{frame}{Цифровая подпись}{(дополнение к предыдущей лекции)}
-	\structure{Общие параметры:} кривая $E$ над~$\mathbb{F}_q$, $P \in E(\mathbb{F}_q)$, $r = \operatorname{ord}$.
+	\structure{Общие параметры:} кривая $E$ над~$\mathbb{F}_q$, $P \in E(\mathbb{F}_q)$, $r = \operatorname{ord}(P)$.
 	
 	\vspace{1em}
 	\structure{Подпись} := (\structure{Setup}, \structure{Sign}, \structure{Verify}).
