--- a/EllipticCurves2022/lecture3_slides/lecture3_slides.tex
+++ b/EllipticCurves2022/lecture3_slides/lecture3_slides.tex
@@ -36,7 +36,7 @@
     \]
     \item \structure{Точки $n$-кручения} -- элементы множества:
     \[
-    E[n] = \left\{ {\left. P \in E(\bar K)\right|nP = \mathcal{O}} \right\}
+    E[n] = \left\{ {\left. P \in E(\bar K)\right| [n]P = \mathcal{O}} \right\}
     \]
 \end{itemize}
 \end{frame}
