--- a/EllipticCurves2022/lecture3_slides/lecture3_slides.tex
+++ b/EllipticCurves2022/lecture3_slides/lecture3_slides.tex
@@ -144,7 +144,7 @@ E[2] = \left\{ \mathcal{O}, (e_1, 0), (e_2 ,0), (e_3,0) \right\} \simeq \mathbb{
     {\psi _1} &= 1 \\
     {\psi _2} &= 2y \\
     {\psi _3} &= 3{x^4} + 6A{x^2} + 12Bx - {A^2} \\
-    {\psi _4} &= 4{y^2}\left( {{x^6} + 5A{x^4} + 20B{x^3} - 5{A^2}{x^2} - 4ABx - z{B^2} - {A^3}} \right) \\
+    {\psi _4} &= 4{y}\left( {{x^6} + 5A{x^4} + 20B{x^3} - 5{A^2}{x^2} - 4ABx - 8{B^2} - {A^3}} \right) \\
     {\psi _{2m + 1}} &= {\psi _{m + 2}}\psi _m^3 - {\psi _{m - 1}}\psi _{m + 1}^3, \quad m \geqslant 2 \\
     {\psi _{2m}} &= {\left( {2y} \right)^{ - 1}} \cdot {\psi _m} \cdot \left( {{\psi _{m + 2}}\psi _{m - 1}^2 - {\psi _{m - 2}}\psi _{m + 1}^2} \right),\quad m \geqslant 3
 \end{align*}
