--- a/EllipticCurves2022/lab03/lab03.tex
+++ b/EllipticCurves2022/lab03/lab03.tex
@@ -86,14 +86,14 @@
 \begin{document}	
 	{\noindent
 		\textsc{БФУ им. И. Канта -- Компьютерный практикум по криптографии на эллиптических кривых }\\[5pt]
-		Преподаватель {С. Новоселов}   \hfill{Осень 2022\\}
+		Преподаватель {С. Новоселов}   \hfill{2022\\}
 	\hrule
 	\begin{center}
 		{\LARGE\textbf{
-				Лабораторная работа № 2 \\[5pt]
+				Лабораторная работа № 3 \\[5pt]
 		}} 
-			Опубликована \textbf{28.09.2022} \\[5pt] 
-			Дедлайн \textbf{12.10.2022}
+			Опубликована \textbf{26.10.2022} \\[5pt] 
+			Дедлайн \textbf{09.11.2022}
 		
 	\end{center}
 	\hrule \vspace{5mm}
@@ -103,21 +103,26 @@
 	Разработать программу в системе компьютерной алгебры Sage, реализующую следующие функции:
 	
 	\begin{enumerate}
-		\item \texttt{Sum($\mathtt{a, b, q,  x1, y1, x2, y2}$)}, где $\mathtt{a, b}$ -- коэффициенты эллиптической кривой $E$, заданной над полем $\FF_q$, $q$ -- простое, $\neq 2,3$, $P_1 = \mathtt{(x1, y1)}, P_2 = \mathtt{(x2, y2)}$-- точки на $E$ ($y_i  = \text{infinity}$ для $P_i = \mathcal{O}$). Функция возвращает координаты $P_3 = \mathtt{(x3, y3)}= P_1 + P_2$. Если $P_1$ или $P_2$ не лежат на $E$, функция возвращает ошибку.
+		\item \texttt{nTorsion\_extension\_deg($\mathtt{n, a, b, q}$)}, где $\mathtt{a, b}$ -- коэффициенты эллиптической кривой $E: y^2 = x^3 +ax+b$, заданной над полем $\FF_q$, где $q$ - простое, $\neq 2,3$, $n \geq 3$. Функция возвращает $d = [K_{E,n}: K]$ -- степень расширения поля $K_{E,n} = (x_1, y_1, \ldots x_m, y_m)$ над $K = \FF_q$, где $E[n] = \{ \mathcal{O}, (x_1, y_1), \ldots, (x_m, y_m)\}$ -- точки $n$-кручения эллиптической кривой $E$.
 		
-		\item \texttt{SumProj($\mathtt{a, b, q,  x1, y1, z1, x2, y2, z2}$)}, те же параметры и выходные данные, что и для функции \texttt{Sum($\mathtt{a, b, q,  x1, y1, x2, y2}$)}, но точки~$P_1, P_2 $ заданы в проективных координатах. Вычисления проводятся  также с проективными координатами.
-		
-		\item \texttt{Mul($\mathtt{a, b, q,  x1, y1, k}$)}, где $\mathtt{a, b}$ -- коэффициенты эллиптической кривой~$E$, заданной над полем~$\FF_q$, где~$q$ -- простое, $\neq 2,3$, $P_1 = (x_1, y_1) \in E$, $k \in \ZZ$. Функция возвращает координаты точки~$P_k = (x_k, y_k) = k \cdot P_1$. Если~$P_1 \notin E$, функция возвращает ошибку.
-		
-		\item 
+		\item \texttt{nTorsionPoints($\mathtt{n, a, b, q}$)}, те же выходные данные, что и для функции  \texttt{nTorsion\_extension\_deg($\mathtt{n, a, b, q}$)}, но здесь $n \geq 1$. Функция возвращает все точки $n$-кручения кривой $E$.
 	\end{enumerate}
 
+\Large {
+		\textbf{Замечание: оптимизировать работу функций так, чтобы они терминировали за разумное время для малых и средних значений $n, q$.}
+		
+}
+\normalsize
 \section*{Требования к сдаче}
-    \begin{itemize}
-        \item Исходный код должен содержать комментарии к каждой из функций с описанием входных и выходных параметров
-        \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку "\texttt{\# your code here.}" на код, реализующий функцию.
-        \item Функции должны работать на всех примерах, что проверяется запуском команды:
-        \\\texttt{sage -t file\_with\_tests.sage}
-        \item Студент должен понимать, что он написал, зачем, а также ответить на теоретические вопросы.
-    \end{itemize}
+\begin{itemize}
+    \item Исходный код должен содержать комментарии к каждой из функций с описанием входных и выходных параметров
+    \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку
+    
+    "\texttt{\# your code here.}"
+    
+    на код, реализующий функцию.
+    \item Функции должны работать на всех примерах, что проверяется запуском команды:
+    \\\texttt{sage -t file\_with\_tests.sage}
+    \item Студент должен понимать, что он написал, зачем, а также ответить на теоретические вопросы.
+\end{itemize}
 \end{document}
