--- a/EllipticCurves2022/lab05/lab05.tex
+++ b/EllipticCurves2022/lab05/lab05.tex
@@ -86,14 +86,14 @@
 \begin{document}	
 	{\noindent
 		\textsc{БФУ им. И. Канта -- Компьютерный практикум по криптографии на эллиптических кривых }\\[5pt]
-		Преподаватель {С. Новоселов}   \hfill{Осень 2022\\}
+		Преподаватель {С. Новоселов}   \hfill{2022\\}
 	\hrule
 	\begin{center}
 		{\LARGE\textbf{
-				Лабораторная работа № 2 \\[5pt]
+				Лабораторная работа № 5 \\[5pt]
 		}} 
-			Опубликована \textbf{28.09.2022} \\[5pt] 
-			Дедлайн \textbf{12.10.2022}
+			Опубликована \textbf{02.11.2022} \\[5pt] 
+			Дэдлайн \textbf{16.11.2022}
 		
 	\end{center}
 	\hrule \vspace{5mm}
@@ -103,21 +103,22 @@
 	Разработать программу в системе компьютерной алгебры Sage, реализующую следующие функции:
 	
 	\begin{enumerate}
-		\item \texttt{Sum($\mathtt{a, b, q,  x1, y1, x2, y2}$)}, где $\mathtt{a, b}$ -- коэффициенты эллиптической кривой $E$, заданной над полем $\FF_q$, $q$ -- простое, $\neq 2,3$, $P_1 = \mathtt{(x1, y1)}, P_2 = \mathtt{(x2, y2)}$-- точки на $E$ ($y_i  = \text{infinity}$ для $P_i = \mathcal{O}$). Функция возвращает координаты $P_3 = \mathtt{(x3, y3)}= P_1 + P_2$. Если $P_1$ или $P_2$ не лежат на $E$, функция возвращает ошибку.
+		\item \texttt{factorECM($N$)}, где $N=p q$, $p,q$ -- простые. Функция реализует алгоритм факторизации на эллиптической кривой и возвращает либо $(p,q)$, либо, в случае длительных вычислений, ``делители не найдены''.
 		
-		\item \texttt{SumProj($\mathtt{a, b, q,  x1, y1, z1, x2, y2, z2}$)}, те же параметры и выходные данные, что и для функции \texttt{Sum($\mathtt{a, b, q,  x1, y1, x2, y2}$)}, но точки~$P_1, P_2 $ заданы в проективных координатах. Вычисления проводятся  также с проективными координатами.
+		Для тестирования можно пользоваться встроенной функцией, см. \url{http://doc.sagemath.org/html/en/reference/interfaces/sage/interfaces/ecm.html}.
 		
-		\item \texttt{Mul($\mathtt{a, b, q,  x1, y1, k}$)}, где $\mathtt{a, b}$ -- коэффициенты эллиптической кривой~$E$, заданной над полем~$\FF_q$, где~$q$ -- простое, $\neq 2,3$, $P_1 = (x_1, y_1) \in E$, $k \in \ZZ$. Функция возвращает координаты точки~$P_k = (x_k, y_k) = k \cdot P_1$. Если~$P_1 \notin E$, функция возвращает ошибку.
-		
-		\item 
 	\end{enumerate}
-
+\normalsize
 \section*{Требования к сдаче}
-    \begin{itemize}
-        \item Исходный код должен содержать комментарии к каждой из функций с описанием входных и выходных параметров
-        \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку "\texttt{\# your code here.}" на код, реализующий функцию.
-        \item Функции должны работать на всех примерах, что проверяется запуском команды:
-        \\\texttt{sage -t file\_with\_tests.sage}
-        \item Студент должен понимать, что он написал, зачем, а также ответить на теоретические вопросы.
-    \end{itemize}
+\begin{itemize}
+	 \item Исходный код должен содержать комментарии к каждой из функций с описанием входных и выходных параметров
+     \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку
+
+	"\texttt{\# your code here.}"
+
+	на код, реализующий функцию.	
+	\item Функции должны работать на всех примерах, что проверяется запуском команды:
+	\\\texttt{sage -t file\_with\_tests.sage}
+	\item Студент должен понимать, что он написал, зачем, а также ответить на теоретические вопросы.
+\end{itemize}
 \end{document}
