--- a/InfoSec2022/Lecture2/Lecture2.tex
+++ b/InfoSec2022/Lecture2/Lecture2.tex
@@ -151,6 +151,31 @@
 	\titlepage
 \end{frame}
 
+\begin{frame}{Админ}
+	
+	\Large
+	{\color{Orange} I. Симметрическая криптография} \\[10pt]
+	\begin{itemize}
+		\item 11/10 Псевдослучайные генераторы
+		\item 18/10 Блок-шифры
+		\item 25/10 Хэш-функции. Коды аутентификации сообщений 
+	\end{itemize}
+	
+	\vspace{20pt}
+	{\color{Orange} II. Асимметрическая криптография}
+	
+	\begin{itemize}
+		\item 1/11 Обмен ключами
+		\item 8/11 Цифровые подписи
+	\end{itemize}
+
+	\begin{itemize}
+		\item {\color{Orange}12/11 в  15:30-- 17:00 (?) } Зачет
+	\end{itemize}
+
+	
+\end{frame}
+
 
 \begin{frame}{Блок-шифры: мотивация}
 \LARGE 
@@ -320,7 +345,7 @@
 	построить обратимую $F(k, \cdot):\{0,1\}^{2n} \rightarrow \{0,1\}^{2n}$ \\
 	\centering
 	\tikzmark{start}
-	%\includegraphics[height=0.65\textheight]{feistel}
+	\includegraphics[height=0.65\textheight]{feistel}
 	\tikzmark{end} 
 \end{frame}
 
@@ -328,7 +353,7 @@
 \begin{frame}{Пример: Раундовая функция $f$ в ГОСТе'89}
 \centering
 \tikzmark{start}
-%\includegraphics[height=0.83\textheight]{GostRound}
+\includegraphics[height=0.83\textheight]{GostRound}
 \tikzmark{end} 
 
 \vfill
@@ -368,10 +393,10 @@
 
 
 
-\begin{frame}{Подстановочно-перестановочная сеть(SPN)}
+\begin{frame}{Подстановочно-перестановочная сеть (SPN)}
 \centering
 \tikzmark{start}
-%\includegraphics[height=\textheight, angle=90, origin=c]{SPN}
+\includegraphics[height=\textheight, angle=90, origin=c]{SPN}
 \tikzmark{end} 
 
 \vfill
