EC-2022: isogeny lecture

--- a/EllipticCurves2022/beamerthemeec2020.sty
+++ b/EllipticCurves2022/beamerthemeec2020.sty
@@ -13,6 +13,7 @@
 \usepackage{fontspec}
 %\usepackage{fontawesome}
 \usepackage{fontawesome5}
+\usepackage{ulem}
 
 \newfontfamily\faExt[Path="../fonts/",
 Extension = .otf,
