--- a/EllipticCurves2022/biblio.bib
+++ b/EllipticCurves2022/biblio.bib
@@ -106,6 +106,12 @@
     year={2019}
 }
 
+@book{CastryckDecru2022,
+	author = {Wouter Castryck and Thomas Decru},
+	title = {An efficient key recovery attack on SIDH},
+	year = {2022}
+}
+
 @online{SIKE,
     title={SIKE – Supersingular Isogeny Key Encapsulation},
     year={2020},
