EC-2022: fix typos

--- a/EllipticCurves2022/lecture10_slides/lecture10_slides.tex
+++ b/EllipticCurves2022/lecture10_slides/lecture10_slides.tex
@@ -161,7 +161,7 @@ b' = b - 7 \sum_{Q \in G \setminus \{\mathcal{O}\}} \left(
 	\begin{tikzcd}
 		\text{\structure{{\Large\faUserSecret}}} & & \text{\structure{{\Large\faCat}}} \\
 		& \arrow{ld}[swap]{\phi_A} g \arrow{rd}{\phi_B}  \\
-		\phi_A(g) & \arrow[yshift=-0.7ex]{r}{\phi_B(g)} \arrow[yshift=0.7ex]{l}{\phi_B(g)}  & \phi_B(g)\\
+		\phi_A(g) & \arrow[yshift=-0.7ex]{r}{\phi_A(g)} \arrow[yshift=0.7ex]{l}{\phi_B(g)}  & \phi_B(g)\\
 	\end{tikzcd}
 	\]
 	\[
@@ -328,7 +328,6 @@ E \xrightarrow{\phi_1} E_1  \xrightarrow{\phi_2} E_2 \xrightarrow{\phi_3} \ldots
 	\item Проверяем, что подгруппа \[(P_C, \phi_B(P_A)), (Q_C, \phi_B(Q_A)) \subseteq C \times E/B\] разложимая
 	\item Если разложимая, то~$\phi_1 = \phi_1'$ и~$E_1' = E_1$
 \end{enumerate}
-
 \end{frame}
 
 \begin{frame}{Схемы стойкие к атаке}
