EC-2023: lecture 2 and stub for lecture 3

--- a/EllipticCurves2023/lecture1_slides/lecture1_slides.tex
+++ b/EllipticCurves2023/lecture1_slides/lecture1_slides.tex
@@ -91,6 +91,21 @@
 \end{enumerate}
 \end{frame}
 
+\begin{frame}{Порядок работы}
+	\structure{Формат:} лекции \structure{+} сдача лабораторных работ
+\vspace{0.5em}
+\begin{itemize}
+	\item после лекций выкладываются лабораторные работы
+	\item срок сдачи: \structure{2} недели
+	\item за пределами срока сдачи работы принимаются с низким приоритетом и в количестве не более \structure{2} за пару
+\end{itemize}
+\vspace{0.5em}
+\structure{Экзамен}: сдать \structure{85\%} лабораторных и \structure{курсовую}
+\begin{itemize}
+	\item оценка -- среднее по оценкам за сдачу лабораторных
+\end{itemize}
+\end{frame}
+
 \begin{frame}{Определение}
 	Уравнение Вейерштрасса \structure{в аффинных координатах}:
 	\begin{equation}\label{eq:weierstrassequation}
