EC-2023: fix for lecture 1 and lab 2

--- a/EllipticCurves2023/lecture1_slides/lecture1_slides.tex
+++ b/EllipticCurves2023/lecture1_slides/lecture1_slides.tex
@@ -390,7 +390,7 @@ j(E) = \frac{c_4^3}{\Delta}
 		\item Криптоанализ схем на изогениях (несколько тем)
 		\item Схема цифровой подписи SQISign
 		\item Атака Кастрика-Декру
-		\item \url{crypto-kantiana.com/thesis_topics.html}
+		\item \href{https://crypto-kantiana.com/thesis_topics.html}{crypto-kantiana.com/thesis\_topics.html}
 	\end{enumerate}
 \end{frame}
 
