--- a/EllipticCurves2023/lab02/lab02.tex
+++ b/EllipticCurves2023/lab02/lab02.tex
@@ -113,7 +113,11 @@
 \section*{Требования к сдаче}
     \begin{itemize}
         \item Исходный код должен содержать комментарии к каждой из функций с описанием входных и выходных параметров
-        \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку "\texttt{\# your code here.}"~ на код, реализующий функцию.
+        \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку
+        
+        \texttt{\# your code here.}
+        
+        на код, реализующий функцию.
         \item Функции должны работать на всех примерах, что проверяется запуском команды:
         \\\texttt{sage -t file\_with\_tests.sage}
         \item Студент должен понимать, что он написал, зачем, а также ответить на теоретические вопросы.
