--- a/InfoSec2022/Lecture3/Lecture3.tex
+++ b/InfoSec2022/Lecture3/Lecture3.tex
@@ -193,31 +193,31 @@
 	\titlepage
 \end{frame}
 
-\begin{frame}{Админ}
-	
-	\Large
-	{\color{Orange} I. Симметрическая криптография} \\[10pt]
-	\begin{itemize}
-		\item 11/10 Псевдослучайные генераторы
-		\item 18/10 Блок-шифры
-		\item 25/10 Хэш-функции. Коды аутентификации сообщений 
-	\end{itemize}
-	
-	\vspace{20pt}
-	{\color{Orange} II. Асимметрическая криптография}
-	
-	\begin{itemize}
-		\item 1/11 Обмен ключами (в записи!)
-		\item 8/11 Цифровые подписи
-	\end{itemize}
-	
-	\begin{itemize}
-		\item {\color{Orange}12/11 в  10:00 -- 11:30 } Зачет
-		\item {\color{Orange}10/11 в  10:00 / 19:00 } Доп. сдача лаб
-	\end{itemize}
-	
-	
-\end{frame}
+%\begin{frame}{Админ}
+%	
+%	\Large
+%	{\color{Orange} I. Симметрическая криптография} \\[10pt]
+%	\begin{itemize}
+%		\item 11/10 Псевдослучайные генераторы
+%		\item 18/10 Блок-шифры
+%		\item 25/10 Хэш-функции. Коды аутентификации сообщений 
+%	\end{itemize}
+%	
+%	\vspace{20pt}
+%	{\color{Orange} II. Асимметрическая криптография}
+%	
+%	\begin{itemize}
+%		\item 1/11 Обмен ключами (в записи!)
+%		\item 8/11 Цифровые подписи
+%	\end{itemize}
+%	
+%	\begin{itemize}
+%		\item {\color{Orange}12/11 в  10:00 -- 11:30 } Зачет
+%		\item {\color{Orange}10/11 в  10:00 / 19:00 } Доп. сдача лаб
+%	\end{itemize}
+%	
+%	
+%\end{frame}
 
 
 \begin{frame}{Конфиденциальность \& целостность}
