--- a/InfoSec2022/Lecture2/Lecture2.tex
+++ b/InfoSec2022/Lecture2/Lecture2.tex
@@ -151,30 +151,30 @@
 	\titlepage
 \end{frame}
 
-\begin{frame}{Админ}
-	
-	\Large
-	{\color{Orange} I. Симметрическая криптография} \\[10pt]
-	\begin{itemize}
-		\item 11/10 Псевдослучайные генераторы
-		\item 18/10 Блок-шифры
-		\item 25/10 Хэш-функции. Коды аутентификации сообщений 
-	\end{itemize}
-	
-	\vspace{20pt}
-	{\color{Orange} II. Асимметрическая криптография}
-	
-	\begin{itemize}
-		\item 1/11 Обмен ключами
-		\item 8/11 Цифровые подписи
-	\end{itemize}
-
-	\begin{itemize}
-		\item {\color{Orange}12/11 в  15:30-- 17:00 (?) } Зачет
-	\end{itemize}
-
-	
-\end{frame}
+%\begin{frame}{Админ}
+%	
+%	\Large
+%	{\color{Orange} I. Симметрическая криптография} \\[10pt]
+%	\begin{itemize}
+%		\item 11/10 Псевдослучайные генераторы
+%		\item 18/10 Блок-шифры
+%		\item 25/10 Хэш-функции. Коды аутентификации сообщений 
+%	\end{itemize}
+%	
+%	\vspace{20pt}
+%	{\color{Orange} II. Асимметрическая криптография}
+%	
+%	\begin{itemize}
+%		\item 1/11 Обмен ключами
+%		\item 8/11 Цифровые подписи
+%	\end{itemize}
+%
+%	\begin{itemize}
+%		\item {\color{Orange}12/11 в  15:30-- 17:00 (?) } Зачет
+%	\end{itemize}
+%
+%	
+%\end{frame}
 
 
 \begin{frame}{Блок-шифры: мотивация}
