EC-2023: lecture 5 slides

--- a/EllipticCurves2023/lecture3_slides/lecture3_slides.tex
+++ b/EllipticCurves2023/lecture3_slides/lecture3_slides.tex
@@ -259,7 +259,7 @@ $e_n(S,T) = 1, \forall S \implies T = \mathcal{O}$
 
 \begin{frame}{Литература}
 \nocite{Menezes1993}\nocite{Blake1999}\nocite{Washington2008}
-
+\renewcommand*{\bibfont}{\scriptsize}
 \printbibliography
 
 
