--- a/EllipticCurves2023/lab06/lab06.tex
+++ b/EllipticCurves2023/lab06/lab06.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = ru_RU-Russian
 \documentclass[11pt]{exam}
 
 %---enable russian----
@@ -19,6 +20,7 @@
 \usepackage{amssymb}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{hyperref}
+\usepackage{cmap}
 
 \usepackage{algorithmicx, enumitem, algpseudocode, algorithm, caption}
 \usepackage{tikz}
@@ -90,10 +92,10 @@
 	\hrule
 	\begin{center}
 		{\LARGE\textbf{
-				Лабораторная работа № 5 \\[5pt]
+				Лабораторная работа № 6 \\[5pt]
 		}} 
 			Опубликована \textbf{02.11.2023} \\[5pt] 
-			Дэдлайн \textbf{16.11.2023}
+			Дэдлайн \textbf{23.11.2023}
 		
 	\end{center}
 	\hrule \vspace{5mm}
@@ -103,22 +105,24 @@
 	Разработать программу в системе компьютерной алгебры Sage, реализующую следующие функции:
 	
 	\begin{enumerate}
-		\item \texttt{factorECM($N$)}, где $N=p q$, $p,q$ -- простые. Функция реализует алгоритм факторизации на эллиптической кривой и возвращает либо $(p,q)$, либо, в случае длительных вычислений, ``делители не найдены''.
+		\item \texttt{Prove\_prime($p$)}, где $p$ -- простое или составное число. Функция реализует алгоритм теста на простоту Goldwasser-Killain и возвращает (с большой вероятностью) либо $С$-сертификат простоты $p$, либо делитель $p$; с малой вероятностью возвращает ``fail''.
 		
-		Для тестирования можно пользоваться встроенной функцией, см. \url{http://doc.sagemath.org/html/en/reference/interfaces/sage/interfaces/ecm.html}.
+		\item \texttt{Check\_prime($p_0, C = [A_0, B_0, L_0, p_1], \ldots [A_i, B_i, L_i, p_{i+1}]$)}, где $C$ -- сертификат простоты числа $p_0$. Функция реализует алгоритм проверки сертификата на простоту и возвращает либо ``Accept'' (в случае принятия сертификата), либо ``Reject'' с пояснением, почему.
+		
+		
 		
 	\end{enumerate}
 \normalsize
 \section*{Требования к сдаче}
 \begin{itemize}
-	 \item Исходный код должен содержать комментарии к каждой из функций с описанием входных и выходных параметров
-     \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку
-
-	"\texttt{\# your code here.}"
-
-	на код, реализующий функцию.	
-	\item Функции должны работать на всех примерах, что проверяется запуском команды:
-	\\\texttt{sage -t file\_with\_tests.sage}
-	\item Студент должен понимать, что он написал, зачем, а также ответить на теоретические вопросы.
+    \item Исходный код должен содержать комментарии к каждой из функций с описанием входных и выходных параметров
+    \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку
+    
+    "\texttt{\# your code here.}"
+    
+    на код, реализующий функцию.
+    \item Функции должны работать на всех примерах, что проверяется запуском команды:
+    \\\texttt{sage -t file\_with\_tests.sage}
+    \item Студент должен понимать, что он написал, зачем, а также ответить на теоретические вопросы.
 \end{itemize}
 \end{document}
